Fix layout issues

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -16,8 +16,9 @@ body {
 
 
     .container {
-        width: 375px;
+        max-width: 375px;
         margin: 2em auto;
+        padding: 1em;
 
         img {
             width: 150px;
@@ -39,9 +40,15 @@ body {
         }
 
         .textfields {
+            width: 100%;
             margin: 1em 0;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 1em;
 
             .textfield {
+                width: 40%;
                 border: none;
                 border-radius: 8px;
                 padding: .5em;
